# free-smiley-dealer-discord

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PRIVACY.md  README.md  TERMS.md  discord_emoji_codes.json  fly.toml  heroku.yml  pyproject.toml
.github/: dependabot.yml
FreeSmileysBot/: DBLAPI.py  bot.py  config.json.template  data.json  dynamic_data.json  extensions.py  main.py  smileys.json  static_data.json  token.json.template
FreeSmileysBot/cogs/: dblapi.py  smileydealer.py
FreeSmileysBot/cogs/smileydealer/: cog.py  converters.py  database.py
free_smiley_dealer/: config.py  database.py  extensions.py  main.py  static_data.py  utils.py
free_smiley_dealer/cogs/: dblapi.py
free_smiley_dealer/cogs/smileydealer/: __init__.py  converters.py  core.py
