[tool.poetry]
name = "free-smiley-dealer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.1"
dblpy = "^0.2"
environs = "^9.2.0"
motor = "^2.1.0"
aioitertools = "^0.7.1"
dnspython = "^1.16.0"
emojis = "^0.6.0"

[tool.poetry.dev-dependencies]
ipython = "7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
