[tool.poetry]
name = "free-smiley-dealer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.0.0"
environs = "^9.2.0"
motor = "^3.0.0"
aioitertools = "^0.10.0"
dnspython = "^2.2.0"
emojis = "^0.6.0"
nest-asyncio = "^1.5.5"

[tool.poetry.dev-dependencies]
ipython = "7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
